--- a/Gym Management system/Gym Management system.csproj
+++ b/Gym Management system/Gym Management system.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Gym_Management_system</RootNamespace>
     <Nullable>enable</Nullable>
