Label to each tab

--- a/Gym Management system/Gym Management system.csproj
+++ b/Gym Management system/Gym Management system.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="EditStaffForm.cs" />
     <Compile Update="EditPlanForm.cs">
       <SubType>Form</SubType>
     </Compile>
