Refactored the mainform functions

--- a/Gym Management system/Gym Management system.csproj
+++ b/Gym Management system/Gym Management system.csproj
@@ -33,9 +33,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Update="Members\MemberShips.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Update="Members\MemberShips.cs" />
   </ItemGroup>
 
   <ItemGroup>
